--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,62 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+@media (max-width:500px){
+    .title-container div {	
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
+        background-position: center;	
+        color: white;	
+        width:100%;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height:60vh;
+        margin:5% 0;
+    }
+    
+
+h1{
+    font-size: 4.5rem;
+    font-style: bold;
+}
+nav{
+    width:60%;
+    display:flex;
+    justify-content:space-evenly;
+    margin-top:5%;
+}
+
+button{
+    padding-left: 6%;
+    padding-right: 6%;
+}
+.artists-container{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width:100%;
+    align-items: center;
+}
+
+.bio{
+    max-width: 700px;
+    margin: 0 auto 30px;
+    justify-content: center;
+    font-size: 1.6rem;
+    height: 100%;
+}
+
+.artist img{
+    width: 100%;
+    height: 35vh;
+    display: flex;
+    justify-content: center;
+
+}
+artist p{
+    width: 100%
+    ;
+}
+}
